--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -46,6 +46,7 @@
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/medium_purple"
         android:text="@string/addtofav"
+        android:textAllCaps="false"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
