Alarm  notification working and modify DataBase v7

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,10 +8,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_constrain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shape"
-        >
+        android:background="@drawable/shape">
 
         <RadioGroup
             android:id="@+id/IntialradioGroup"
