--- a/app/src/main/res/layout/fragment_favorite_weather.xml
+++ b/app/src/main/res/layout/fragment_favorite_weather.xml
@@ -15,9 +15,9 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/fav_weather_const"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
 
             <TextView
