--- a/app/src/main/res/layout/fragment_favorite_weather.xml
+++ b/app/src/main/res/layout/fragment_favorite_weather.xml
@@ -71,7 +71,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="22dp"
-                        android:layout_marginEnd="50dp"
+                        android:layout_marginEnd="40dp"
                         android:text="clear sky "
                         android:textColor="@color/white"
                         android:textSize="20sp"
@@ -83,11 +83,11 @@
                         android:id="@+id/weather_temp_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="18dp"
+                        android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="13°"
                         android:textColor="@color/white"
-                        android:textSize="34sp"
+                        android:textSize="55sp"
                         android:visibility="visible"
                         app:layout_constraintEnd_toEndOf="@+id/weather_status_txt"
                         app:layout_constraintStart_toStartOf="@+id/weather_status_txt"
@@ -95,9 +95,8 @@
 
                     <ImageView
                         android:id="@+id/myFavWeatherIconImg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="50dp"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/weather_temp_txt"
