--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,7 +76,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="22dp"
-                        android:layout_marginEnd="50dp"
+                        android:layout_marginEnd="60dp"
                         android:text="clear sky "
                         android:textColor="@color/white"
                         android:textSize="20sp"
@@ -88,11 +88,11 @@
                         android:id="@+id/weather_temp_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="18dp"
+                        android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="13°"
                         android:textColor="@color/white"
-                        android:textSize="34sp"
+                        android:textSize="55sp"
                         android:visibility="visible"
                         app:layout_constraintEnd_toEndOf="@+id/weather_status_txt"
                         app:layout_constraintStart_toStartOf="@+id/weather_status_txt"
@@ -100,8 +100,8 @@
 
                     <ImageView
                         android:id="@+id/weatherIconImg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/weather_temp_txt"
