--- a/app/src/main/res/layout/fav_locations.xml
+++ b/app/src/main/res/layout/fav_locations.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Clear sky"
+                android:text="unknown place"
                 android:textAlignment="gravity"
                 android:textColor="@color/white"
                 android:textSize="14sp"
