--- a/app/src/main/res/navigation/my_graph.xml
+++ b/app/src/main/res/navigation/my_graph.xml
@@ -89,7 +89,9 @@
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_mapsFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/mapsFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="status"
             app:argType="string"
